Project development: add info on CALL...IN TRANSACTIONS clause in Neo4j methodologies

--- a/project_development/5a_neo4j_methodologies.ipynb
+++ b/project_development/5a_neo4j_methodologies.ipynb
@@ -79,7 +79,7 @@
     "Create student nodes:\n",
     "</h5>\n",
     "<code>\n",
-    "    LOAD CSV WITH HEADERS FROM 'file:///dataset250k.csv' AS line \n",
+    "LOAD CSV WITH HEADERS FROM 'file:///dataset250k.csv' AS line \n",
     "\tMERGE(:student {studentID: line.studentID, firstName: line.firstName, lastName: line.lastName,\n",
     "                    dob: line.dateOfBirth, genre: line.genre, country: line.country, town: line.town,\n",
     "                    email: line.email});\n",
@@ -142,9 +142,13 @@
     "</code>\n",
     "<br>\n",
     "<h4>\n",
-    "A note on using the APOC plugin<br>\n",
+    "A note on dealing with memory overhead<br>\n",
     "</h4>\n",
-    "When using the <code>LOAD CSV</code> method, if the csv file size is large and a large amount of nodes or relationships are to be created, it is possible to run into memory allocation problems. A convenient way to address such problems is to call the <code>apoc.periodic.iterate</code> procedure from the APOC Neo4j plugin (some references <a href = 'https://neo4j.com/labs/apoc/5/installation/#docker'>here</a>). The plugin can be installed by conveniently setting the required environment variables in the Docker compose file (see Neo4j Docker compose file used in the project). The procedure can be called by using the <code>CALL</code> command and it requires three parameters:\n",
+    "When using the <code>LOAD CSV</code> method, if the csv file size is large and a large amount of nodes or relationships are to be created, it is possible to run into memory allocation problems. There are different ways to address this kind of problems, I have attempted two of them, one which exploits the <code>apoc.periodic.iterate</code> procedure from the APOC Neo4j plugin (some references <a href = 'https://neo4j.com/labs/apoc/5/installation/#docker'>here</a>), the other one which uses the <code>CALL ... IN TRANSACTIONS</code> clause.<br>\n",
+    "<h5>\n",
+    "    1 - APOC plugin\n",
+    "</h5>\n",
+    "As for the APOC plugin, it can be installed by conveniently setting the required environment variables in the Docker compose file (see Neo4j Docker compose file used in the project). The procedure can be called by using the <code>CALL</code> command and it requires three parameters:\n",
     "\n",
     "- a first Cypher statement to retrieve the data (in my case, for example I need a first statement with two <code>MATCH</code> commands to retrieve the required nodes and a <code>RETURN</code> command with the nodes variable names);\n",
     "- a second Cypher statement to tell the system what to do with the data (create the relationship between the retrieved nodes, in my case, by using the <code>MERGE</code> command); \n",
@@ -163,6 +167,26 @@
     "    {batchSize: 5000, parallel: false});\n",
     "</code>\n",
     "<br>\n",
+    "<h5>\n",
+    "    2 - <code>CALL ... IN TRANSACTIONS</code>\n",
+    "</h5>\n",
+    "As for the <code>CALL ... IN TRANSACTIONS</code> subquery, it follows the <code>LOAD CSV</code> clause and tells the system to commit after a given number of rows are processed. The previous example would be written as follows:\n",
+    "<code>\n",
+    "    LOAD CSV WITH HEADERS FROM 'file:///dataset500k.csv' AS line \n",
+    "    CALL {\n",
+    "        WITH line\n",
+    "            MATCH(s:student {studentID: line.studentID, firstName: line.firstName, lastName: line.lastName, \n",
+    "                dob: line.dateOfBirth, genre: line.genre, country: line.country, town: line.town,\n",
+    "                email: line.email}) \n",
+    "            MATCH(m:material {materialID: line.materialID, unit: line.unit, mType: line.materialType, \n",
+    "                mName: line.name, dimension: line.dimension}) \n",
+    "            RETURN s, m\", \n",
+    "            MERGE (s) -[:studies {accessDate: line.accessDate}] -> (m)\n",
+    "    }\n",
+    "    IN TRANSACTIONS OF 500 ROWS;\n",
+    "</code>\n",
+    "<br>\n",
+    "The methodology I chose for the project is the second one.\n",
     "<h4>\n",
     "Notes when running Neo4j from a Docker container\n",
     "</h4><br>\n",
