Remove exposition of authentication details

--- a/project_development/1a_mysql_methodologies.ipynb
+++ b/project_development/1a_mysql_methodologies.ipynb
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = connector.connect(host = '127.0.0.1', port = '3306', user = 'root', password = 'X4mPpd3V', database = 'dbB_MYSQL_test')"
+    "conn = connector.connect(host = '127.0.0.1', port = '3306', user = 'root', password = 'myPassword', database = 'dbB_MYSQL_test')"
    ]
   },
   {
