--- a/project_development/1b_mysql_queries.ipynb
+++ b/project_development/1b_mysql_queries.ipynb
@@ -41,7 +41,7 @@
     "import csv                            # read and write csv files\n",
     "\n",
     "# create connection object\n",
-    "conn = connector.connect(host = '127.0.0.1', port = '3306', user = 'root', password = 'X4mPpd3V', database = 'dbB_MYSQL_test')\n",
+    "conn = connector.connect(host = '127.0.0.1', port = '3306', user = 'root', password = 'myPassword', database = 'dbB_MYSQL_test')\n",
     "\n",
     "# create cursor object\n",
     "cursor = conn.cursor()"
