--- a/project_development/3a_mongodb_methodologies.ipynb
+++ b/project_development/3a_mongodb_methodologies.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = pymongo.MongoClient(host = 'localhost', port = 27017, username = 'root', password = 'root')"
+    "client = pymongo.MongoClient(host = 'localhost', port = 27017, username = 'root', password = 'myPassword')"
    ]
   },
   {
