--- a/project_development/3b_mongodb_queries.ipynb
+++ b/project_development/3b_mongodb_queries.ipynb
@@ -40,7 +40,7 @@
     "import csv                # read and write csv files\n",
     "\n",
     "# create client object\n",
-    "client = pymongo.MongoClient(host = 'localhost', port = 27017, username = 'root', password = 'root')\n",
+    "client = pymongo.MongoClient(host = 'localhost', port = 27017, username = 'root', password = 'myPassword')\n",
     "\n",
     "# assign database to Python variable (db)\n",
     "db = client.get_database('dbB_MONGODB_test')\n",
